force-app/main/default/objects/Calculator_Offer_Product__c/Calculator_Offer_Product__c.object-meta.xml
<CustomObject>
    <label>Calculator Offer Product</label>
    <nameField>
        <label>Calculator Offer Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calculator Offer Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>