force-app/main/default/objects/Calculator_Offer_Product__c/fields/Calculator_Offer__c.field-meta.xml
<CustomField>
    <fullName>Calculator_Offer__c</fullName>
    <label>Calculator Offer</label>
    <referenceTo>Calculator_Offer__c</referenceTo>
    <relationshipLabel>Calculator Offer Products</relationshipLabel>
    <relationshipName>Calculator_Bundle_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>