force-app/main/default/objects/Calculator_Offer_Product__c/fields/Delay_Days__c.field-meta.xml
<CustomField>
    <fullName>Delay_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Delay Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>