force-app/main/default/objects/Calculator_Offer_Product__c/fields/Master_Product__c.field-meta.xml
<CustomField>
    <fullName>Master_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Product</label>
    <type>Checkbox</type>
</CustomField>