force-app/main/default/objects/Calculator_Offer_Product__c/fields/Upsell_Product__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upsell Product</label>
    <type>Checkbox</type>
</CustomField>