force-app/main/default/objects/Calculator_Offer_Product__c/fields/Use_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Use_Pricebook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Pricebook</label>
    <type>Checkbox</type>
</CustomField>